--- a/gamerapp/templates/partials/related_custom_pc_builds.html
+++ b/gamerapp/templates/partials/related_custom_pc_builds.html
@@ -1,6 +1,6 @@
 <div style="margin-top:45px;margin-bottom:45px;margin-left:1px; width:60px;" class="divider"></div>
 <section>
-<h3 class="fw-bolder mb-4 mt-5" >Related Custom PC Builds</h3>
+<h3 class="fw-bolder mb-4 mt-5" id="relatedPosts">Related Custom PC Builds</h3>
     <br>
     <div class="row">
         {% for review in pc_builds_related %}
