--- a/gamerapp/templates/pc_builds/pc_under_1500.html
+++ b/gamerapp/templates/pc_builds/pc_under_1500.html
@@ -128,7 +128,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_cpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TF2x4E" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_cpu.jpg' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -140,7 +140,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3verTNy" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -152,7 +152,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_cooler.jpg ' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49WBhV8" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_cooler.jpg ' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Cooler
@@ -164,7 +164,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_motherboard.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4cioApg" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_motherboard.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -176,7 +176,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4ckvDNZ" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -188,7 +188,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_storage.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4cjMMaC" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_storage.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -200,7 +200,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3THXssB" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -212,7 +212,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_case.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3INfC5D" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_1500/pc_under_1500_usd_case.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -271,7 +271,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TF2x4E" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -321,7 +321,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3verTNy" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -367,7 +367,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49WBhV8" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -418,7 +418,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4cioApg" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -463,7 +463,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4ckvDNZ" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -503,7 +503,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4cjMMaC" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -547,7 +547,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3THXssB" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -590,7 +590,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3INfC5D" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
