--- a/gamerapp/templates/pc_builds/pc_under_2000.html
+++ b/gamerapp/templates/pc_builds/pc_under_2000.html
@@ -131,7 +131,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_cpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/48Z836D" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_cpu.jpg' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -143,7 +143,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4cypFtl" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -155,7 +155,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_cooler.jpg ' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3vqCLI2" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_cooler.jpg ' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Cooler
@@ -167,7 +167,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_motherboard.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TCZlGT" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_motherboard.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -179,7 +179,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49WS3TU" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -191,7 +191,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_storage.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3VgjXWG" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_storage.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -203,7 +203,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3vcBGUn" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -215,7 +215,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_case.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3IHRMZe" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_2000/pc_under_2000_usd_case.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -270,7 +270,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/48Z836D" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -319,7 +319,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4cypFtl" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -366,7 +366,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3vqCLI2" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -413,7 +413,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TCZlGT" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -432,7 +432,7 @@
                                 </div>
                                 <div class="col-md-8">
                                     <div class="card-body">
-                                        <h4 class="card-title"> Kingston Fury Beast DDR5</h4>
+                                        <h4 class="card-title">Kingston Fury Beast DDR5</h4>
                                         <p class="card-text"></p>
                                         <table style="margin-top:50px;" class="table table-bordered border-primary">
                                             <tbody>
@@ -455,7 +455,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49WS3TU" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -494,7 +494,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3VgjXWG" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -532,7 +532,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3vcBGUn" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -572,7 +572,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3IHRMZe" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
