--- a/gamerapp/templates/pc_builds/pc_under_4000.html
+++ b/gamerapp/templates/pc_builds/pc_under_4000.html
@@ -113,7 +113,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_cpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TJhUJG" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_cpu.jpg' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -125,7 +125,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/48WIX8t" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -137,7 +137,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_cooler.jpg ' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3v6PwHT" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_cooler.jpg ' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Cooler
@@ -149,7 +149,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_motherboard.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4chMOQv" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_motherboard.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -161,19 +161,19 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/49Toumg" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
                                     </div>
                                     <div class="pc-comp-text">
-                                        G.Skill Trident Z5 RGB DDR5 32GB (2 x 16GB) DDR5 6400MHz
+                                        G.Skill Trident Z5 RGB DDR5 32GB (2 x 16GB) DDR5 7200MHz
                                     </div>                           
                                 </div>
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_storage.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3wToLHc" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_storage.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -185,7 +185,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_psu.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3Vk0V1t" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_psu.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -197,7 +197,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_case.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3PpStdu" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_4000/pc_under_4000_usd_case.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -252,7 +252,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TJhUJG" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -301,7 +301,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/48WIX8t" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -349,7 +349,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3v6PwHT" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -397,7 +397,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4chMOQv" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -425,7 +425,7 @@
                                             <tbody>
                                                 <tr>
                                                     <th>Speed</th>
-                                                    <td>6400MHz</td>
+                                                    <td>7200MHz</td>
                                                 </tr>
                                                 <tr>
                                                     <th>Capacity</th>
@@ -433,7 +433,7 @@
                                                 </tr>
                                                 <tr>
                                                     <th>CAS Latency</th>
-                                                    <td>CL32</td>   
+                                                    <td>CL34</td>   
                                                 </tr>
                                                 <tr>
                                                     <th>Dimensions</th>
@@ -442,7 +442,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/49Toumg" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -481,7 +481,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3wToLHc" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -519,7 +519,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3Vk0V1t" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -562,7 +562,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3PpStdu" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
