--- a/gamerapp/templates/home.html
+++ b/gamerapp/templates/home.html
@@ -4,14 +4,14 @@
 {% block homebody %}
         <!-- Page header with logo and tagline-->
         <header class="py-5 bg-light border-bottom mb-4" style="background : radial-gradient(ellipse at bottom, #1b2735 0%,#090a0f 100%);">
-            <div class="container">
+            <div class="container" style="height: 90px; display: flex; justify-content: center; align-items: center;">
                 <div class="text-center my-5">
                     <section class="wrapper">
                         <div id="stars"></div>
                         <div id="stars2"></div>
                         <div id="stars3"></div>
                     </section>
-                    <h1 class="fw-bolder" style="color:white">Welcome to the Gaming Hub</h1>
+                    <h1 class="fw-bolder" style="color:white">Welcome to TheGamingHub</h1>
                     <p class="lead mb-0" style="color:white">The Gamers Paradise</p>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                                         <a href="{% url review.slug %}" onmouseover="zoomImage(this)" onmouseout="unzoomImage(this)"><img src="{{review.image.url}}" style="border-radius: 5px;" class="card-img-top" alt="..."></a>
                                     </div>
                                     <div class="col-md-6">
-                                        <div class="card-body">
+                                        <div class="card-body" style="margin-top:-13px;">
                                             <a class="badge bg-secondary text-decoration-none link-light" style="font-size:11.5px;text-decoration: none;color:#a00000;margin-left: 1.5px;" href="{% url review.sub_category.slug %}">{{review.sub_category.name|upper}}</a>
                                             <a class="badge bg-secondary text-decoration-none link-light" style="font-size:11.5px;text-decoration: none;color:#a00000;margin-left: 1.5px;" href="{% url review.main_category.slug %}">{{review.main_category.name|upper}}</a><br> 
                                             <a href="{% url review.slug %}" class="card-title h4 review-link">{{review.topic}}</a>
