--- a/gamerapp/templates/pc_builds/pc_under_3000.html
+++ b/gamerapp/templates/pc_builds/pc_under_3000.html
@@ -117,7 +117,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_cpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4aAGMsH" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_cpu.jpg' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -129,7 +129,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TQ3l7b" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -141,7 +141,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_cooler.jpg ' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3PmOdeL" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_cooler.jpg ' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Cooler
@@ -153,7 +153,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_motherboard.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4alYArj" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_motherboard.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -165,7 +165,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/43lbRy2" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -177,7 +177,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_storage.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3IDpMpE" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_storage.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -189,7 +189,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4aiLBX4" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -201,7 +201,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_case.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3TpHcuK" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_3000/pc_under_3000_usd_case.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -256,7 +256,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4aAGMsH" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -305,7 +305,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TQ3l7b" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -356,7 +356,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3PmOdeL" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -402,7 +402,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4alYArj" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -437,7 +437,7 @@
                                                 </tr>
                                                 <tr>
                                                     <th>CAS Latency</th>
-                                                    <td>CL40</td>   
+                                                    <td>CL30</td>   
                                                 </tr>
                                                 <tr>
                                                     <th>Dimensions</th>
@@ -446,7 +446,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/43lbRy2" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -485,7 +485,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3IDpMpE" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -524,7 +524,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4aiLBX4" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -567,7 +567,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3TpHcuK" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
