--- a/gamerapp/templates/pc_builds/pc_under_5000.html
+++ b/gamerapp/templates/pc_builds/pc_under_5000.html
@@ -125,7 +125,7 @@
                                 <p>
                                 <div class="pc-comp-row" >
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_cpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4cm1I89" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_cpu.jpg' %}" alt="..." /></a>
                                     </div>
                                      <div class="pc-comp-name">
                                         CPU
@@ -137,7 +137,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_gpu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3wWMuGC" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_gpu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         GPU
@@ -149,7 +149,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_cooler.jpg ' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3IGElIV" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_cooler.jpg ' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Cooler
@@ -161,7 +161,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_motherboard.png' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3Pqo52s" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_motherboard.png' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Motherboard
@@ -173,7 +173,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_ram.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4cevrQF" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_ram.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         RAM
@@ -185,7 +185,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_storage.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/4am54q9" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_storage.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Storage
@@ -197,7 +197,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_psu.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3vjOrMP" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_psu.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Power Supply
@@ -209,7 +209,7 @@
                                 <hr class="my-0" />
                                 <div class="pc-comp-row">
                                     <div class="pc-build-img">
-                                        <a href="#"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_case.jpg' %}" alt="..." /></a>
+                                        <a href="https://amzn.to/3x6qyZw" target="_blank"><img class="card-img-top" src="{% static 'images/pc_builds/pc_under_5000/pc_under_5000_usd_case.jpg' %}" alt="..." /></a>
                                     </div>
                                     <div class="pc-comp-name">
                                         Case
@@ -264,7 +264,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4cm1I89" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -313,7 +313,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3wWMuGC" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -362,7 +362,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3IGElIV" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -407,7 +407,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3Pqo52s" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -453,7 +453,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4cevrQF" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -493,7 +493,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/4am54q9" target="_blank" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="fs-5 mb-4">
@@ -534,7 +534,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3vjOrMP" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
@@ -575,7 +575,7 @@
                                             </tbody>
                                         </table>
                                     </div>
-                                    <a style="margin-bottom:20px;" class="pc-comp-button">SEE PRICE</a>
+                                    <a href="https://amzn.to/3x6qyZw" target="_blank" style="margin-bottom:20px;" class="pc-comp-button">AMAZON PRICE</a>
                                 </div>
                                 <div class="text-container">
                                     <p class="card-text">
