--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11048,11 +11048,11 @@ a {
   cursor: pointer;
   transition: transform 0.2s ease, background 0.2s ease;
   background-color: black;
-  margin-left:40px;
+  margin-left:25px;
 }
 
 .pc-build-button:hover {
-  transform: scale(1.1); /* Increase size on hover */
+  transform: scale(1.05); /* Increase size on hover */
   background: linear-gradient(45deg, #2E8B57, #32CD32, #3CB371);
   color: white; /* Text color on hover */
 }
@@ -11662,8 +11662,10 @@ a {
 
 .custom-footer {
   margin-bottom: -20px;
-  margin-right:0;
-  margin-left:0;
+  margin-right:-110px;
+  margin-left:-112px;
+  height: 250px;
+  /* position: relative; */
 }
 @media (max-width: 767px) {
   .custom-footer {
@@ -11814,9 +11816,10 @@ nav .wrapper{
   border-radius: 5px;
   transition: all 0.3s ease;
 }
-.nav-links li a:hover{
-  /* background: #3A3B3C; */
+.nav-links li:hover .desktop-item{
   color:#a00000;
+  border-bottom: 3px solid #a00000;
+  border-radius: 0%;
 }
 .nav-links .mobile-item{
   display: none;
@@ -11831,13 +11834,16 @@ nav .wrapper{
   visibility: hidden;
   box-shadow: 0 6px 10px rgba(0,0,0,0.15);
 }
+/* .nav-links li:hover a, */
 .nav-links li:hover .drop-menu,
 .nav-links li:hover .mega-box{
   transition: all 0.3s ease;
   top: 70px;
   opacity: 1;
+  /* color:#a00000; */
   visibility: visible;
 }
+
 .drop-menu li a{
   width: 100%;
   display: block;
@@ -12064,3 +12070,27 @@ nav input{
   font-size: 45px;
   font-weight: 600;
 }
+
+
+
+/* contact formm--------- */
+
+
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+/* *{
+  margin: 0;
+  padding: 0;
+  outline: none;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  padding: 10px;
+  font-family: 'Poppins', sans-serif;
+  background: linear-gradient(115deg, #56d8e4 10%, #9f01ea 90%);
+} */
+
